Finalize python file. adding notes about data, improvement, and next step

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -162,7 +162,7 @@
        "[121 rows x 4 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "[450 rows x 6 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
        "[15000 rows x 6 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,22 +560,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mazia\\AppData\\Local\\Temp\\ipykernel_8156\\1008501725.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_devices['location'] = df_devices['location'].fillna('Unknown')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# I am not sure - depend on system analysing - we can replace null locations with \"unknown\"\n",
     "df_devices['location'] = df_devices['location'].fillna('Unknown')"
@@ -583,9 +570,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -739,7 +726,7 @@
        "[425 rows x 6 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +867,7 @@
        "[120 rows x 4 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {
     "scrolled": false
    },
@@ -962,7 +949,7 @@
        "220  d_7f6727b5           44"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1144,7 @@
        "4         heater         3.5.beta     Home  2023-12-28     can  Android  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1178,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {
     "scrolled": false
    },
@@ -1246,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true
    },
@@ -1283,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1292,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -1327,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -1364,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {
     "scrolled": true
    },
@@ -1415,12 +1402,140 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### - A small number of devices generate a large number of events. outliers or unusual value"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>device_id</th>\n",
+       "      <th>event_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>430</th>\n",
+       "      <td>d_f4abcb9e</td>\n",
+       "      <td>1517</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>303</th>\n",
+       "      <td>d_b27b3b90</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>d_05655d2b</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135</th>\n",
+       "      <td>d_502f0068</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>220</th>\n",
+       "      <td>d_7f6727b5</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      device_id  event_count\n",
+       "430  d_f4abcb9e         1517\n",
+       "303  d_b27b3b90           46\n",
+       "7    d_05655d2b           45\n",
+       "135  d_502f0068           44\n",
+       "220  d_7f6727b5           44"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "events_per_device = (\n",
+    "    df_events.groupby('device_id')\n",
+    "      .size()\n",
+    "      .reset_index(name='event_count')\n",
+    "      .sort_values('event_count', ascending=False)\n",
+    ")\n",
+    "\n",
+    "events_per_device.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### based on my search on devices table, this device is a \"fan\" in \"Office\" and there are many other \"fan\"s without location and many without user_id. I think there are some fan that all of their activities counted on this specific fan.\n",
+    "#### The solution is on the input data side (Sensor) and at the edge-computing side to check all packet of data includes all neseserry parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### - Many devices are declared wititout user_id or location"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "df_devices.isna().sum()\n",
+    "\n",
+    "- device_id             0\n",
+    "- user_id              25\n",
+    "- ...\n",
+    "- location            108\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Solution: Again is on the edge-computing side that after geting data from sensor/device, process and check it and actuates a proper behavior to complete data from user or resources like location indicator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code for hypothesis testing here"
+    "# Your code for hypothesis testing here\n",
+    "\n",
+    "# the related codes are shown above in data cleaning"
    ]
   },
   {
@@ -1438,8 +1553,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Write your reflection here...*"
+    "*Write your reflection here...*\n",
+    "\n",
+    "We can have:\n",
+    "- event_type (on/off, error, status_update, etc.)\n",
+    "- severity_level (info/warning/error)\n",
+    "- time_duration  (maybe need, depend on usage of sensors)\n",
+    "\n",
+    "Actually, we can have many of these data in payload field which includes a JSON data\n",
+    "\n",
+    "---\n",
+    "\n",
+    "limitation:\n",
+    "\n",
+    " - No clear validation of outliers\n",
+    " \n",
+    " ---\n",
+    " \n",
+    " Phase 0 to Phase 1\n",
+    " \n",
+    " - Based on my educate and experience in IoT system including Sensors, Actuators, Edge computing, and Cloud computing. I will focus first on input data side to optimize it and make sure that the captured data / receiving data are without missing values or invalid data\n",
+    " - Next step is very depend on the system definitions and usage"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
